--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -25,10 +25,12 @@
             <div class="mb-3">
                 <label for="totalMessageCount" class="form-label">Total Message Count</label>
                 <input type="number" class="form-control" name="totalMessageCount" value="<%= data.totalMessageCount %>" required>
+                <!-- <input type="number" class="form-control" name="totalMessageCount" value="<%= data.totalMessageCount %>" min="<%= data.totalMessageCount %>" required> -->
             </div>
             <div class="mb-3">
-                <label for="sendMessageCount" class="form-label">Send Message Count</label>
-                <input type="number" class="form-control" name="sendMessageCount"  value="<%= data.sentMessageCount %>" required>
+                <label for="sentMessageCount" class="form-label">Send Message Count</label>
+                <input type="number" class="form-control" name="sentMessageCount"  value="<%= data.sentMessageCount %>" required>
+                <!-- <input type="number" class="form-control" name="sentMessageCount"  value="<%= data.sentMessageCount %>" max="<%= data.totalMessageCount %>" required> -->
             </div>
             <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
         </form>
