--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,69 +1,124 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mail Trap</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <h1 class="text-primary">Mail Trap</h1>
-        </div>
-        <div class="col-6">
-          <a href="/settings" type="button" class="btn btn-primary m-2" style="float: right;" title="mail settings"><i class="fas fa-cog"></i></a>
-        </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+  <title>Mail Trap</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <h1 class="text-primary">Mail Trap</h1>
+      </div>
+      <div class="col-6">
+        <a href="/settings" type="button" class="btn btn-primary m-2" style="float: right;" title="mail settings"><i
+            class="fas fa-cog"></i></a>
       </div>
     </div>
-    <div class="container m-5">
-      <div class="row">
-        <div class="col-6">
-          <h3 class="text-center text-danger">Total: 100</h3>
-        </div>
-        <div class="col-6">
-          <h3 class="text-center text-success">Sent: 10</h3>
-        </div>
+  </div>
+  <div class="container m-5">
+    <div class="row">
+      <div class="col-6">
+        <h3 class="text-center text-danger p-5">Total: <%= mailSettings.totalMessageCount %>
+        </h3>
+      </div>
+      <div class="col-6">
+        <h3 class="text-center text-success p-5">Sent: <%= mailSettings.sentMessageCount %>
+        </h3>
       </div>
     </div>
+  </div>
 
-    <div class="container mt-5">
-      <table class="table" style="box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);">
-        <thead>
-          <tr class="table-primary">
-            <th scope="col">Name</th>
-            <th scope="col">Actual %</th>
-            <th scope="col">Current %</th>
-            <th scope="col">Received</th>
-          </tr>
-        </thead>
-        <tbody>
+  <div class="container mt-5">
+    <table class="table" style="box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);">
+      <thead>
+        <tr class="table-primary">
+          <th scope="col">Name</th>
+          <th scope="col">Actual %</th>
+          <th scope="col">Current %</th>
+          <th scope="col">Received</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for(var i=0; i < recipients.length; i++) { %>
           <tr>
-            <td>Mark</td>
-            <td>20%</td>
-            <td>50%</td>
-            <td>10</td>
+            <td>
+              <%= recipients[i].recipientName %>
+            </td>
+            <td>
+              <%= recipients[i].actualPercentage %>%
+            </td>
+            <td>
+              <%= recipients[i].currentPercentage %>%
+            </td>
+            <td>
+              <%= recipients[i].receviedMessageCount %>
+            </td>
           </tr>
-        </tbody>
-      </table>
-    </div>
+          <% } %>
+      </tbody>
+    </table>
+  </div>
 
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  </body>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+  var total = parseInt("<%= mailSettings.totalMessageCount %>");
+  var sent = parseInt("<%= mailSettings.sentMessageCount %>");
+
+  $(document).ready(function () {
+    if (total > sent) {
+      sendMail();
+    } else {
+      swal("No message to send!");
+    }
+  });
+
+  function sendMail() {
+    $.ajax({
+      type: 'GET',
+      url: '/send',
+      data: {
+        total: total,
+        sent: sent
+      },
+      contentType: "application/json",
+      success: function (data) {
+        if (data.success) {
+          window. location. reload();
+        } else {
+          swal("Error in sending message");
+        }
+      },
+      error: function (MLHttpRequest, textStatus, errorThrown) {
+        alert(errorThrown);
+      }
+    });
+  }
+</script>
+
 </html>
