--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid bg-info">
     <div class="row">
       <div class="col-6">
-        <h1 class="text-primary">Mail Trap</h1>
+        <h1 class="text-light">Messenger</h1>
       </div>
       <div class="col-6">
         <a href="/settings" type="button" class="btn btn-primary m-2" style="float: right;" title="mail settings"><i
@@ -25,15 +25,22 @@
       </div>
     </div>
   </div>
-  <div class="container m-5">
+
+  <div class="container mt-5">
     <div class="row">
-      <div class="col-6">
-        <h3 class="text-center text-danger p-5">Total: <%= mailSettings.totalMessageCount %>
-        </h3>
+      <div class="col-sm-6">
+        <div class="card border-danger" style="box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28); border-radius: 20px;">
+          <div class="card-body">
+            <h3 class="text-center text-danger p-5">Total: <%= mailSettings.totalMessageCount %></h3>
+          </div>
+        </div>
       </div>
-      <div class="col-6">
-        <h3 class="text-center text-success p-5">Sent: <%= mailSettings.sentMessageCount %>
-        </h3>
+      <div class="col-sm-6">
+        <div class="card border-success" style="box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28); border-radius: 20px;">
+          <div class="card-body">
+            <h3 class="text-center text-success p-5">Sent: <%= mailSettings.sentMessageCount %></h3>
+          </div>
+        </div>
       </div>
     </div>
   </div>
